apps/home-assistant/zigbee2mqtt-conbee.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee2mqtt
      namespace: home-assistant
    spec:
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:1.39.1
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: true
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: zigbee2mqtt-data
            mountPath: /data
          - name: zigbee2mqtt-config
            mountPath: /data/configuration.yaml
            subPath: configuration.yaml
            readOnly: true
          - name: zigbee2mqtt-secrets
            mountPath: /data/secrets.yaml
            subPath: secrets.yaml
            readOnly: true
          - name: zigbee2mqtt-udev
            mountPath: /run/udev
          - name: ttyacm
            mountPath: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2292211-if00
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 3
          timeoutSeconds: 1
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 0
          failureThreshold: 30
          timeoutSeconds: 1
          periodSeconds: 5
      volumes:
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt-conbee-pvc
        - name: zigbee2mqtt-udev
          hostPath:
            path: /run/udev
        - name: ttyacm
          hostPath:
            path: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2292211-if00
            type: CharDevice
        - name: zigbee2mqtt-config
          configMap:
            name: zigbee2mqtt-config
        - name: zigbee2mqtt-secrets
          secret:
            secretName: zigbee2mqtt-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - name: zigbee2mqtt
      port: 8080
      targetPort: http
      protocol: TCP
