apps/home-assistant/additional-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-public
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - &host ha.tmem.de
      secretName: home-assistant-public-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /api/alexa/smart_home
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-oauth2
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/limit-rps: 12
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.tmem.de/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.tmem.de/oauth2/start?rd=$request_uri"
spec:
  tls:
    - hosts:
        - &host ha.tmem.de
      secretName: home-assistant-oauth2-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
