apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-public
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - &host ha.tmem.de
      secretName: home-assistant-public-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
