apps/home-assistant/zigbee2mqtt-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - &conbee-host conbee.internal.tmem.de
        - &sonoff-host sonoff.internal.tmem.de
      secretName: zigbee2mqtt-tls
  rules:
    - host: *conbee-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 8080     
    - host: *sonoff-host
      http:
        paths:     
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt-sonoff
                port:
                  number: 8080
